objects/EUR_ISP_Spend__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Spends (EU)</relationshipLabel>
        <relationshipName>Spends_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Allocation_Method__c</fullName>
        <label>Allocation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Available_Amount__c</fullName>
        <formula>EUR_ISP_Committed_Invoiced_App_Amount__c - EUR_ISP_Matched__c</formula>
        <inlineHelpText>Shows committed and approved activiities total amount MINUS already Matched Amount</inlineHelpText>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Awaiting_Approval_Amount__c</fullName>
        <label>Awaiting Approval Amount</label>
        <summarizedField>EUR_ISP_Spend_Activity__c.EUR_ISP_Total_Activity_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_ISP_Spend_Activity__c.EUR_ISP_Status__c</field>
            <operation>equals</operation>
            <value>Committed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_ISP_Spend_Activity__c.EUR_ISP_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_ISP_Spend_Activity__c.EUR_ISP_Spend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Calculation_Engine_Country__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;EUR_ISP_SFA_Contract&apos;, &apos;DE&apos;, &apos;ISP&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation Engine Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Committed_Invoiced_App_Amount__c</fullName>
        <label>Committed, Invoiced &amp; Approved Amount</label>
        <summarizedField>EUR_ISP_Spend_Activity__c.EUR_ISP_Total_Activity_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_ISP_Spend_Activity__c.EUR_ISP_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>EUR_ISP_Spend_Activity__c.EUR_ISP_Status__c</field>
            <operation>equals</operation>
            <value>Committed, Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_ISP_Spend_Activity__c.EUR_ISP_Spend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipLabel>Spends (EU)</relationshipLabel>
        <relationshipName>Spends_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Deductible_Value__c</fullName>
        <label>Deductible Value</label>
        <summarizedField>EUR_ISP_Spend_Activity__c.EUR_ISP_Total_Activity_Amount__c</summarizedField>
        <summaryForeignKey>EUR_ISP_Spend_Activity__c.EUR_ISP_Spend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Dirty_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dirty Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Funding_Based__c</fullName>
        <label>Funding Based</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales In</fullName>
                </value>
                <value>
                    <fullName>Sales Out</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Matched__c</fullName>
        <label>Matched</label>
        <summarizedField>EUR_ISP_Spend_Activity__c.EUR_ISP_Total_Matched__c</summarizedField>
        <summaryForeignKey>EUR_ISP_Spend_Activity__c.EUR_ISP_Spend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Phasing_Method__c</fullName>
        <label>Phasing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro Rata</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Settlement_Method__c</fullName>
        <label>Settlement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Free Stock</fullName>
                </value>
                <value>
                    <fullName>On Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Status__c</fullName>
        <inlineHelpText>Status &quot;Committed&quot; is the entry criteria for the approval process</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ringfence</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Total_Spend_Activities_Amount__c</fullName>
        <label>Total Spend Activities Amount</label>
        <summarizedField>EUR_ISP_Spend_Activity__c.EUR_ISP_Total_Activity_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>EUR_ISP_Spend_Activity__c.EUR_ISP_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>EUR_ISP_Spend_Activity__c.EUR_ISP_Spend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_User_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>EUR_ISP_Vendor__c</referenceTo>
        <relationshipLabel>Spends (EU)</relationshipLabel>
        <relationshipName>Spends_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Spend (EU)</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Spend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spends (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_Commercial_Plan</fullName>
        <active>true</active>
        <label>Commercial Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_Marketing_Project</fullName>
        <active>true</active>
        <label>Marketing Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_SFA_Contract</fullName>
        <active>true</active>
        <label>SFA Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_ISP_Spend_Start_Date</fullName>
        <active>true</active>
        <description>Validation on Start Date &lt; End Date on spend</description>
        <errorConditionFormula>AND(
   OR(ISCHANGED(EUR_ISP_Start_Date__c),  ISCHANGED(EUR_ISP_End_Date__c)),
   EUR_ISP_Start_Date__c &gt; EUR_ISP_End_Date__c
)</errorConditionFormula>
        <errorDisplayField>EUR_ISP_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date has to be set before End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_ISP_Spend_Start_Date_FiscalYear</fullName>
        <active>true</active>
        <description>Start Date has to be set before previous fiscal year</description>
        <errorConditionFormula>AND(ISCHANGED(EUR_ISP_Start_Date__c), EUR_ISP_Start_Date__c &lt;= DATE(YEAR(TODAY()) - 1, 6, 30))</errorConditionFormula>
        <errorDisplayField>EUR_ISP_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date has to be set before previous fiscal year</errorMessage>
    </validationRules>
</CustomObject>